# agent-x-LLM

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
memory/: debug_ai_assistant.json
outputs/: context_snapshot_2025-07-03_11-18-44.json
prompts/system_prompts/: planning_prompt.py
src/: main.py
src/agents/: code_reviewer_agent.py  code_writer_agent.py  doc_agent.py  docker_agent.py  github_agent.py  performance_agent.py  planner_agent.py  security_agent.py  self_debugger_agent.py  test_agent.py  writer_agent.py
src/codegen/: dependency_installer.py  file_formatter.py  file_writer.py  structure_builder.py  syntax_checker.py
src/core/: chain_orchestrator.py  context_tracker.py  llm_adapter.py  memory_manager.py  prompt_engine.py  retry_handler.py
src/interface/: cli_runner.py  discord_bot.py  fastapi_server.py  slack_bot.py  streamlit_ui.py
src/utils/: cost_estimator.py  file_loader.py  file_utils.py  github_uploader.py  time_utils.py  token_tracker.py
src/vector_store/: faiss_index.py  semantic_search.py  weaviate_adapter.py
tests/: temp_test_script.py  test_agent_chain.py  test_generator.py  test_planner_agent.py  test_reviewer.py
